...
                      style: Styles.secondaryText,
                    ),
                    SizedBox(
                      height: 48,
                    ),
                    DefaultButton(
                      key: Key("orderNowButton"),
                      text: viewModel.orderNowButtonTitle,
                      callback: () {
                        navigateToCategoriesPage(context: context);
                      },
                    ),
                    DefaultButton(
...
