...
}

class HomePage extends StatelessWidget {
  // normally filled by the server
  final List<CategoryModel> dataSource = [
    CategoryModel(
        title: "Vegetables", subtitle: "(12)", imageName: "images/media.png"),
    CategoryModel(
        title: "Fruits", subtitle: "(49)", imageName: "images/media.png"),
    CategoryModel(
        title: "Bread", subtitle: "(38)", imageName: "images/media.png"),
    CategoryModel(
        title: "Sweets", subtitle: "(10)", imageName: "images/media.png"),
...
