...
                      height: 40,
                      decoration: BoxDecoration(
                        borderRadius: BorderRadius.all(Radius.circular(8)),
                        color: AppColors.primaryButtonColor,
                      ),
                      child: IconButton(
                        key: Key("shoppingCart"),
                        color: Colors.white,
                        icon: Icon(CupertinoIcons.shopping_cart),
                        onPressed: () {
                          if (didTapCart != null) {
                            didTapCart();
                          }
...
